# documentos-app

./: .dockerignore  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/app/: __init__.py  main.py
api/app/api/: controller.py  mock_controller.py  repository.py  schemas.py  service.py
api/app/common/: exceptions.py
api/app/config/: app.py  base.py
api/app/core/: log.py
api/app/core/download/: __init__.py  downloader.py  models.py  state_manager.py
ocr/: Dockerfile  collect_code.py  pyproject.toml
ocr/app/: config.py  main.py  main_observer.py  ocr_engine.py  pipeline.py
web/: package-lock.json  package.json
web/src/app/: app.config.ts  app.routes.ts
web/src/app/components/accordion-list/: accordion-list.component.css  accordion-list.component.html  accordion-list.component.ts
web/src/app/components/panel-content/: panel-content.component.css  panel-content.component.html  panel-content.component.ts
web/src/app/models/: docs.ts
web/src/app/services/: docs-api.service.ts
